# axiomatic

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.txt  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: fix-light-mode-text-shimmer.md  pdf-pipeline.md
scripts/: bump-version.sh
src/: App.tsx  index.css  main.tsx  router.tsx  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  folder_picker.rs  highlight_commands.rs  lib.rs  models.rs  pdf_engine.rs  session_commands.rs  snip_commands.rs
src/components/: BookTile.tsx  BreakOverlay.tsx  CommandPalette.tsx  ContextMenu.tsx  DirectoryExplorer.tsx  Layout.tsx  LoopCarousel.tsx  NotesPanel.tsx  OutlineSidebar.tsx  PdfThumbnail.tsx  PdfViewer.tsx  PomodoroTimer.tsx  ReaderToolbar.tsx  Sidebar.tsx  SnipBanner.tsx  SnipImage.tsx  SnipOverlay.tsx  SnipTagManager.tsx  SyncStatus.tsx  TabBar.tsx  TagAssigner.tsx  TagManager.tsx  TextLayer.tsx  ThemeToggle.tsx  TileGrid.tsx  Titlebar.tsx  ZoomableSnipImage.tsx
src/extensions/: editor-theme.ts  image-paste.ts  math-decoration.ts  vim-mode.ts
src/hooks/: useBatchedRender.ts  useCurrentPage.ts  useDirectories.ts  useHighlights.ts  useNotes.ts  usePathMap.ts  usePinchZoom.ts  usePomodoroConfig.ts  usePomodoroTimer.ts  useProgress.ts  useSearch.ts  useSnips.ts  useStarred.ts  useSwipe.ts  useSyncStatus.ts  useTabs.ts  (+5 more)
(+67 files in other folders)
